--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,5 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: swift build -v
+  test:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Run tests
         run: swift test -v --parallel
